cdk.out/Awsec3ExpressDockerStack.template.json
{
  "Resources": {
    "helloVpc9B9F5069": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Awsec3ExpressDockerStack/helloVpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/Resource"
      }
    },
    "helloVpcPublicSubnet1Subnet7DC9A25F": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "helloVpc9B9F5069"
        },
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet1/Subnet"
      }
    },
    "helloVpcPublicSubnet1RouteTableE24B4DF4": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "helloVpc9B9F5069"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet1/RouteTable"
      }
    },
    "helloVpcPublicSubnet1RouteTableAssociation5994BFE0": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "helloVpcPublicSubnet1RouteTableE24B4DF4"
        },
        "SubnetId": {
          "Ref": "helloVpcPublicSubnet1Subnet7DC9A25F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "helloVpcPublicSubnet1DefaultRouteCCD85857": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "helloVpcPublicSubnet1RouteTableE24B4DF4"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "helloVpcIGW0DABA8A1"
        }
      },
      "DependsOn": [
        "helloVpcVPCGWABE08629"
      ],
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet1/DefaultRoute"
      }
    },
    "helloVpcPublicSubnet1EIP533DBB0A": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet1/EIP"
      }
    },
    "helloVpcPublicSubnet1NATGatewayA13696F8": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "helloVpcPublicSubnet1EIP533DBB0A",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "helloVpcPublicSubnet1Subnet7DC9A25F"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet1/NATGateway"
      }
    },
    "helloVpcPublicSubnet2SubnetEFEF8172": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "helloVpc9B9F5069"
        },
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet2/Subnet"
      }
    },
    "helloVpcPublicSubnet2RouteTableB25EABDC": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "helloVpc9B9F5069"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet2/RouteTable"
      }
    },
    "helloVpcPublicSubnet2RouteTableAssociation3F51263A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "helloVpcPublicSubnet2RouteTableB25EABDC"
        },
        "SubnetId": {
          "Ref": "helloVpcPublicSubnet2SubnetEFEF8172"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "helloVpcPublicSubnet2DefaultRoute3DD5AE30": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "helloVpcPublicSubnet2RouteTableB25EABDC"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "helloVpcIGW0DABA8A1"
        }
      },
      "DependsOn": [
        "helloVpcVPCGWABE08629"
      ],
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet2/DefaultRoute"
      }
    },
    "helloVpcPublicSubnet2EIP3837FF37": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet2/EIP"
      }
    },
    "helloVpcPublicSubnet2NATGateway85EF9BFE": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "helloVpcPublicSubnet2EIP3837FF37",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "helloVpcPublicSubnet2SubnetEFEF8172"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PublicSubnet2/NATGateway"
      }
    },
    "helloVpcPrivateSubnet1Subnet6D262757": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "helloVpc9B9F5069"
        },
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Awsec3ExpressDockerStack/helloVpc/PrivateSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PrivateSubnet1/Subnet"
      }
    },
    "helloVpcPrivateSubnet1RouteTable88E7B336": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "helloVpc9B9F5069"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Awsec3ExpressDockerStack/helloVpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PrivateSubnet1/RouteTable"
      }
    },
    "helloVpcPrivateSubnet1RouteTableAssociation3C703800": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "helloVpcPrivateSubnet1RouteTable88E7B336"
        },
        "SubnetId": {
          "Ref": "helloVpcPrivateSubnet1Subnet6D262757"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "helloVpcPrivateSubnet1DefaultRouteC5D59BDC": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "helloVpcPrivateSubnet1RouteTable88E7B336"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "helloVpcPublicSubnet1NATGatewayA13696F8"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PrivateSubnet1/DefaultRoute"
      }
    },
    "helloVpcPrivateSubnet2Subnet836950D6": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "helloVpc9B9F5069"
        },
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Awsec3ExpressDockerStack/helloVpc/PrivateSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PrivateSubnet2/Subnet"
      }
    },
    "helloVpcPrivateSubnet2RouteTable62C5CF47": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "helloVpc9B9F5069"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Awsec3ExpressDockerStack/helloVpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PrivateSubnet2/RouteTable"
      }
    },
    "helloVpcPrivateSubnet2RouteTableAssociation7B094613": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "helloVpcPrivateSubnet2RouteTable62C5CF47"
        },
        "SubnetId": {
          "Ref": "helloVpcPrivateSubnet2Subnet836950D6"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "helloVpcPrivateSubnet2DefaultRouteB3955155": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "helloVpcPrivateSubnet2RouteTable62C5CF47"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "helloVpcPublicSubnet2NATGateway85EF9BFE"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/PrivateSubnet2/DefaultRoute"
      }
    },
    "helloVpcIGW0DABA8A1": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Awsec3ExpressDockerStack/helloVpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/IGW"
      }
    },
    "helloVpcVPCGWABE08629": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "helloVpc9B9F5069"
        },
        "InternetGatewayId": {
          "Ref": "helloVpcIGW0DABA8A1"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/helloVpc/VPCGW"
      }
    },
    "ClusterEB0386A7": {
      "Type": "AWS::ECS::Cluster",
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/Resource"
      }
    },
    "ClusterDefaultAutoScalingGroupInstanceSecurityGroup1D15236A": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/InstanceSecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup"
          }
        ],
        "VpcId": {
          "Ref": "helloVpc9B9F5069"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/InstanceSecurityGroup/Resource"
      }
    },
    "ClusterDefaultAutoScalingGroupInstanceSecurityGroupfromAwsec3ExpressDockerStackexternalSecurityGroup9F35EA6332768655350FB5489B": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "FromPort": 32768,
        "GroupId": {
          "Fn::GetAtt": [
            "ClusterDefaultAutoScalingGroupInstanceSecurityGroup1D15236A",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "externalSecurityGroupCBA1C4B8",
            "GroupId"
          ]
        },
        "ToPort": 65535
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/InstanceSecurityGroup/from Awsec3ExpressDockerStackexternalSecurityGroup9F35EA63:32768-65535"
      }
    },
    "ClusterDefaultAutoScalingGroupInstanceRole9A14B384": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/InstanceRole/Resource"
      }
    },
    "ClusterDefaultAutoScalingGroupInstanceRoleDefaultPolicy06157A81": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecs:CreateCluster",
                "ecs:DeregisterContainerInstance",
                "ecs:DiscoverPollEndpoint",
                "ecs:Poll",
                "ecs:RegisterContainerInstance",
                "ecs:StartTelemetrySession",
                "ecs:Submit*",
                "ecr:GetAuthorizationToken",
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": "*"
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "ClusterDefaultAutoScalingGroupInstanceRoleDefaultPolicy06157A81",
        "Roles": [
          {
            "Ref": "ClusterDefaultAutoScalingGroupInstanceRole9A14B384"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/InstanceRole/DefaultPolicy/Resource"
      }
    },
    "ClusterDefaultAutoScalingGroupInstanceProfile2BB4FE55": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Roles": [
          {
            "Ref": "ClusterDefaultAutoScalingGroupInstanceRole9A14B384"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/InstanceProfile"
      }
    },
    "ClusterDefaultAutoScalingGroupLaunchConfig81EA5466": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "ImageId": {
          "Ref": "SsmParameterValueawsserviceecsoptimizedamiamazonlinux2recommendedimageidC96584B6F00A464EAD1953AFF4B05118Parameter"
        },
        "InstanceType": "t2.micro",
        "IamInstanceProfile": {
          "Ref": "ClusterDefaultAutoScalingGroupInstanceProfile2BB4FE55"
        },
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "ClusterDefaultAutoScalingGroupInstanceSecurityGroup1D15236A",
              "GroupId"
            ]
          }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#!/bin/bash\necho ECS_CLUSTER=",
                {
                  "Ref": "ClusterEB0386A7"
                },
                " >> /etc/ecs/ecs.config\nsudo iptables --insert FORWARD 1 --in-interface docker+ --destination 169.254.169.254/32 --jump DROP\nsudo service iptables save\necho ECS_AWSVPC_BLOCK_IMDS=true >> /etc/ecs/ecs.config"
              ]
            ]
          }
        }
      },
      "DependsOn": [
        "ClusterDefaultAutoScalingGroupInstanceRoleDefaultPolicy06157A81",
        "ClusterDefaultAutoScalingGroupInstanceRole9A14B384"
      ],
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/LaunchConfig"
      }
    },
    "ClusterDefaultAutoScalingGroupASG0F98E147": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "MaxSize": "3",
        "MinSize": "1",
        "DesiredCapacity": "3",
        "LaunchConfigurationName": {
          "Ref": "ClusterDefaultAutoScalingGroupLaunchConfig81EA5466"
        },
        "Tags": [
          {
            "Key": "Name",
            "PropagateAtLaunch": true,
            "Value": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup"
          }
        ],
        "VPCZoneIdentifier": [
          {
            "Ref": "helloVpcPrivateSubnet1Subnet6D262757"
          },
          {
            "Ref": "helloVpcPrivateSubnet2Subnet836950D6"
          }
        ]
      },
      "UpdatePolicy": {
        "AutoScalingReplacingUpdate": {
          "WillReplace": true
        },
        "AutoScalingScheduledAction": {
          "IgnoreUnmodifiedGroupSizeProperties": true
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/ASG"
      }
    },
    "ClusterDefaultAutoScalingGroupDrainECSHookFunctionServiceRole2AC250B1": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/DrainECSHook/Function/ServiceRole/Resource"
      }
    },
    "ClusterDefaultAutoScalingGroupDrainECSHookFunctionServiceRoleDefaultPolicy221F6E5E": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ec2:DescribeInstances",
                "ec2:DescribeInstanceAttribute",
                "ec2:DescribeInstanceStatus",
                "ec2:DescribeHosts"
              ],
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": "autoscaling:CompleteLifecycleAction",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":autoscaling:us-east-1:049115433860:autoScalingGroup:*:autoScalingGroupName/",
                    {
                      "Ref": "ClusterDefaultAutoScalingGroupASG0F98E147"
                    }
                  ]
                ]
              }
            },
            {
              "Action": [
                "ecs:DescribeContainerInstances",
                "ecs:DescribeTasks"
              ],
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "ecs:ListContainerInstances",
                "ecs:SubmitContainerStateChange",
                "ecs:SubmitTaskStateChange"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ClusterEB0386A7",
                  "Arn"
                ]
              }
            },
            {
              "Action": [
                "ecs:UpdateContainerInstancesState",
                "ecs:ListTasks"
              ],
              "Condition": {
                "ArnEquals": {
                  "ecs:cluster": {
                    "Fn::GetAtt": [
                      "ClusterEB0386A7",
                      "Arn"
                    ]
                  }
                }
              },
              "Effect": "Allow",
              "Resource": "*"
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "ClusterDefaultAutoScalingGroupDrainECSHookFunctionServiceRoleDefaultPolicy221F6E5E",
        "Roles": [
          {
            "Ref": "ClusterDefaultAutoScalingGroupDrainECSHookFunctionServiceRole2AC250B1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/DrainECSHook/Function/ServiceRole/DefaultPolicy/Resource"
      }
    },
    "ClusterDefaultAutoScalingGroupDrainECSHookFunctionFE918865": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "ZipFile": "import boto3, json, os, time\n\necs = boto3.client('ecs')\nautoscaling = boto3.client('autoscaling')\n\n\ndef lambda_handler(event, context):\n  print(json.dumps(event))\n  cluster = os.environ['CLUSTER']\n  snsTopicArn = event['Records'][0]['Sns']['TopicArn']\n  lifecycle_event = json.loads(event['Records'][0]['Sns']['Message'])\n  instance_id = lifecycle_event.get('EC2InstanceId')\n  if not instance_id:\n    print('Got event without EC2InstanceId: %s', json.dumps(event))\ [...]
        },
        "Handler": "index.lambda_handler",
        "Role": {
          "Fn::GetAtt": [
            "ClusterDefaultAutoScalingGroupDrainECSHookFunctionServiceRole2AC250B1",
            "Arn"
          ]
        },
        "Runtime": "python3.6",
        "Environment": {
          "Variables": {
            "CLUSTER": {
              "Ref": "ClusterEB0386A7"
            }
          }
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup"
          }
        ],
        "Timeout": 310
      },
      "DependsOn": [
        "ClusterDefaultAutoScalingGroupDrainECSHookFunctionServiceRoleDefaultPolicy221F6E5E",
        "ClusterDefaultAutoScalingGroupDrainECSHookFunctionServiceRole2AC250B1"
      ],
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/DrainECSHook/Function/Resource"
      }
    },
    "ClusterDefaultAutoScalingGroupDrainECSHookFunctionAllowInvokeAwsec3ExpressDockerStackClusterDefaultAutoScalingGroupLifecycleHookDrainHookTopic915F219D9A81CAF5": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "ClusterDefaultAutoScalingGroupDrainECSHookFunctionFE918865",
            "Arn"
          ]
        },
        "Principal": "sns.amazonaws.com",
        "SourceArn": {
          "Ref": "ClusterDefaultAutoScalingGroupLifecycleHookDrainHookTopicFE5437FB"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/DrainECSHook/Function/AllowInvoke:Awsec3ExpressDockerStackClusterDefaultAutoScalingGroupLifecycleHookDrainHookTopic915F219D"
      }
    },
    "ClusterDefaultAutoScalingGroupDrainECSHookFunctionTopic3B6438EC": {
      "Type": "AWS::SNS::Subscription",
      "Properties": {
        "Protocol": "lambda",
        "TopicArn": {
          "Ref": "ClusterDefaultAutoScalingGroupLifecycleHookDrainHookTopicFE5437FB"
        },
        "Endpoint": {
          "Fn::GetAtt": [
            "ClusterDefaultAutoScalingGroupDrainECSHookFunctionFE918865",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/DrainECSHook/Function/Topic/Resource"
      }
    },
    "ClusterDefaultAutoScalingGroupLifecycleHookDrainHookRole70201663": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "autoscaling.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/LifecycleHookDrainHook/Role/Resource"
      }
    },
    "ClusterDefaultAutoScalingGroupLifecycleHookDrainHookRoleDefaultPolicyFFFD6EA5": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Resource": {
                "Ref": "ClusterDefaultAutoScalingGroupLifecycleHookDrainHookTopicFE5437FB"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "ClusterDefaultAutoScalingGroupLifecycleHookDrainHookRoleDefaultPolicyFFFD6EA5",
        "Roles": [
          {
            "Ref": "ClusterDefaultAutoScalingGroupLifecycleHookDrainHookRole70201663"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/LifecycleHookDrainHook/Role/DefaultPolicy/Resource"
      }
    },
    "ClusterDefaultAutoScalingGroupLifecycleHookDrainHookTopicFE5437FB": {
      "Type": "AWS::SNS::Topic",
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/LifecycleHookDrainHook/Topic/Resource"
      }
    },
    "ClusterDefaultAutoScalingGroupLifecycleHookDrainHook4A9A4325": {
      "Type": "AWS::AutoScaling::LifecycleHook",
      "Properties": {
        "AutoScalingGroupName": {
          "Ref": "ClusterDefaultAutoScalingGroupASG0F98E147"
        },
        "LifecycleTransition": "autoscaling:EC2_INSTANCE_TERMINATING",
        "DefaultResult": "CONTINUE",
        "HeartbeatTimeout": 300,
        "NotificationTargetARN": {
          "Ref": "ClusterDefaultAutoScalingGroupLifecycleHookDrainHookTopicFE5437FB"
        },
        "RoleARN": {
          "Fn::GetAtt": [
            "ClusterDefaultAutoScalingGroupLifecycleHookDrainHookRole70201663",
            "Arn"
          ]
        }
      },
      "DependsOn": [
        "ClusterDefaultAutoScalingGroupLifecycleHookDrainHookRoleDefaultPolicyFFFD6EA5",
        "ClusterDefaultAutoScalingGroupLifecycleHookDrainHookRole70201663"
      ],
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/Cluster/DefaultAutoScalingGroup/LifecycleHookDrainHook/Resource"
      }
    },
    "hellotaskdefinitionTaskRole92E0F453": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": {
                  "Fn::Join": [
                    "",
                    [
                      "ecs-tasks.",
                      {
                        "Ref": "AWS::URLSuffix"
                      }
                    ]
                  ]
                }
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/hello-task-definition/TaskRole/Resource"
      }
    },
    "hellotaskdefinitionDCBB19EF": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Essential": true,
            "Image": "jrwtango/c2express002",
            "Links": [],
            "Memory": 128,
            "MountPoints": [],
            "Name": "hello",
            "PortMappings": [
              {
                "ContainerPort": 3000,
                "HostPort": 0,
                "Protocol": "tcp"
              }
            ],
            "Ulimits": [],
            "VolumesFrom": []
          }
        ],
        "Family": "Awsec3ExpressDockerStackhellotaskdefinitionCAA74F9A",
        "NetworkMode": "bridge",
        "RequiresCompatibilities": [
          "EC2"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "hellotaskdefinitionTaskRole92E0F453",
            "Arn"
          ]
        },
        "Volumes": []
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/hello-task-definition/Resource"
      }
    },
    "helloserviceService96710632": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "TaskDefinition": {
          "Ref": "hellotaskdefinitionDCBB19EF"
        },
        "Cluster": {
          "Ref": "ClusterEB0386A7"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 3,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "EC2",
        "LoadBalancers": [
          {
            "ContainerName": "hello",
            "ContainerPort": 3000,
            "TargetGroupArn": {
              "Ref": "externalPublicListenergreeterGroup138AB5AD"
            }
          }
        ],
        "SchedulingStrategy": "REPLICA",
        "ServiceRegistries": []
      },
      "DependsOn": [
        "externalPublicListenergreeterGroup138AB5AD",
        "externalPublicListener4F32291C"
      ],
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/hello-service/Service"
      }
    },
    "external068F12D1": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "LoadBalancerAttributes": [],
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "externalSecurityGroupCBA1C4B8",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          {
            "Ref": "helloVpcPublicSubnet1Subnet7DC9A25F"
          },
          {
            "Ref": "helloVpcPublicSubnet2SubnetEFEF8172"
          }
        ],
        "Type": "application"
      },
      "DependsOn": [
        "helloVpcPublicSubnet1DefaultRouteCCD85857",
        "helloVpcPublicSubnet2DefaultRoute3DD5AE30"
      ],
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/external/Resource"
      }
    },
    "externalSecurityGroupCBA1C4B8": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB Awsec3ExpressDockerStackexternalDFF76678",
        "SecurityGroupEgress": [],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Ref": "helloVpc9B9F5069"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/external/SecurityGroup/Resource"
      }
    },
    "externalSecurityGrouptoAwsec3ExpressDockerStackClusterDefaultAutoScalingGroupInstanceSecurityGroup8ADD14BA3276865535D8500966": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "externalSecurityGroupCBA1C4B8",
            "GroupId"
          ]
        },
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "ClusterDefaultAutoScalingGroupInstanceSecurityGroup1D15236A",
            "GroupId"
          ]
        },
        "FromPort": 32768,
        "ToPort": 65535
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/external/SecurityGroup/to Awsec3ExpressDockerStackClusterDefaultAutoScalingGroupInstanceSecurityGroup8ADD14BA:32768-65535"
      }
    },
    "externalPublicListener4F32291C": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "externalPublicListenergreeterGroup138AB5AD"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "external068F12D1"
        },
        "Port": 80,
        "Protocol": "HTTP",
        "Certificates": []
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/external/PublicListener/Resource"
      }
    },
    "externalPublicListenergreeterGroup138AB5AD": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "HTTP",
        "TargetGroupAttributes": [],
        "Targets": [],
        "TargetType": "instance",
        "VpcId": {
          "Ref": "helloVpc9B9F5069"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Awsec3ExpressDockerStack/external/PublicListener/greeterGroup/Resource"
      }
    }
  },
  "Parameters": {
    "SsmParameterValueawsserviceecsoptimizedamiamazonlinux2recommendedimageidC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id"
    }
  },
  "Outputs": {
    "ExternalDNS": {
      "Value": {
        "Fn::GetAtt": [
          "external068F12D1",
          "DNSName"
        ]
      }
    }
  }
}
